# InverseConsistency

./: .gitignore  .readthedocs.yaml  2d128.py  README.md  TODO.md  data.py  describe.py  hireskneetrain.py  inverseConsistentNet.py  medreskneetrain.py  mermaidlite.py  network_wrappers.py  networks.py  preprocess_train_knees.py  requirements.txt  setup.cfg  setup.py  train.py  visualize.py
icon_registration/: network_wrappers.py  train.py  visualize.py
notebooks/: .gitignore  AffineBothNet.ipynb  AffineNet.ipynb  CreateSunnysidePickle.py.ipynb  DoubleDeformable-FourthDICE-ForCameraReady.ipynb  DoubleDeformable-FourthDICE.ipynb  DoubleDeformable-HiresDICE.ipynb  DoubleDeformableDICE.ipynb  FCDICE.ipynb  FrankenDICE.ipynb  GradICONDICEfullres.ipynb  GradICONDICEhires-Copy1.ipynb  GradICONDICEhires-Copy2.ipynb  GradICONDICEhires-Copy3.ipynb  GradICONDICEhires.ipynb  GradICONDice.ipynb  GradICON_add_second_halfres_DICE.ipynb  ICON_lung_demo.ipynb  ITK registration.ipynb  InvestigateAffineDeformableKnee-Copy1.ipynb  InvestigateAffineDeformableKnee.ipynb  InvestigateAffineKnee.ipynb  InvestigateLosses.ipynb  LNCCGradICONDICEhires.ipynb  MonaiIntegration.ipynb  NEDF-Pair.ipynb  NEDF.ipynb  NewDeformDICE.ipynb  PCABasisRegistration.ipynb  Segfault_itk_invstg.ipynb  StumpyChunkyDICE.ipynb  StumpyDICE.ipynb  TrainMatch3d.ipynb  TransformerRegister.ipynb  Untitled.ipynb  Untitled1.ipynb  brain.ipynb  brain_ants_comparison-unstripped-Copy1.ipynb  brain_ants_comparison-unstripped.ipynb  brain_ants_comparison.ipynb  (+3 more)
test/: test_2d_registration_train.py  test_brain_itk.py  (+6 more)
(+160 files in other folders)
