[metadata]
name = icon_registration 
version = 1.1.2
author = Hastings Greer
author_email = t@hgreer.com
description = A package for image registration regularized by inverse consistency
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uncbiag/ICON
project_urls =
    Bug Tracker = https://github.com/uncbiag/ICON/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.4

install_requires =
    torch
    torchvision
    tensorboard
    tqdm
    matplotlib
    footsteps>=0.1.6
    itk==5.3.0
    girder_client==3.1.8

[options.packages.find]
where = src

